bug fix css table overflow

--- a/public/css/semart.css
+++ b/public/css/semart.css
@@ -46,6 +46,9 @@
 .nav-treeview li {
     margin-left: 20px;
 }
+.card-body{
+    overflow: overlay;
+}
 
 /* hide navbar */
 @media (min-width: 992px) {
